src/tests/render_snapshots/snapshots/sabiql__render_snapshots__confirm_dialogs__confirm_dialog_update_preview_jsonb_and_string_mixed.snap
---
source: src/tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                               no dsn | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Owner:   postgres                                                                                                         │
│  public.comments                      ││Comment: User accounts                                                                                                    │
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   users                                                                                                            │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││          ╭ Confirm UPDATE: users ────────────────────────────────────╮                                                   │
│                                       ││          │                                                           │                                                   │
│                                       ││          │ ✓ LOW RISK                                                │                                                   │
│                                       ││          │                                                           │                                                   │
│                                       ││          │ Diff                                                      │                                                   │
│                                       ││          │   metadata:                                               │                                                   │
│                                       ││          │     ...                                                   │                                                   │
│                                       ││          │       "role": "admin",                                    │                                                   │
│                                       ││          │   -   "status": "active"                                  │                                                   │
│                                       │└──────────│   +   "status": "inactive"                                │───────────────────────────────────────────────────┘
│                                       │┌ [3] Resul│     }                                                     │───────────────────────────────────────────────────┐
│                                       ││(select a │                                                           │                                                   │
│                                       ││          │   email:                                                  │                                                   │
│                                       ││          │     - "old@example.com"                                   │                                                   │
│                                       ││          │     + "new@example.com"                                   │                                                   │
│                                       ││          │                                                           │                                                   │
│                                       ││          │ SQL Preview                                               │                                                   │
│                                       ││          │   UPDATE "public"."users"                                 │                                                   │
│                                       ││          │   SET "metadata" = '{...}', "email" = 'new@example.com'   │                                                   │
│                                       ││          │   WHERE "id" = '1';                                       │                                                   │
│                                       ││          │                                                           │                                                   │
│                                       ││          ╰ Enter: Confirm │ Esc: Cancel ─────────────────────────────╯                                                   │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
