src/tests/render_snapshots/snapshots/sabiql__render_snapshots__confirm_dialogs__confirm_dialog_update_preview_jsonb_key_order_normalized.snap
---
source: src/tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                               no dsn | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Owner:   postgres                                                                                                         │
│  public.comments                      ││Comment: User accounts                                                                                                    │
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   users                                                                                                            │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                            ╭ Confirm UPDATE: users ──────────────────────────────────────────────────────────────────────────────────╮                            │
│                            │                                                                                                         │                            │
│                            │ ✓ LOW RISK                                                                                              │                            │
│                            │                                                                                                         │                            │
│                            │ Diff                                                                                                    │                            │
│                            │   target_audience:                                                                                      │                            │
│                            │     ...                                                                                                 │                            │
│                            │         "100-500",                                                                                      │                            │
│                            │   -     "500+"                                                                                          │────────────────────────────┘
│                            │   +     "600+"                                                                                          │────────────────────────────┐
│                            │       ],                                                                                                │                            │
│                            │     ...                                                                                                 │                            │
│                            │                                                                                                         │                            │
│                            │ SQL Preview                                                                                             │                            │
│                            │   UPDATE "public"."users"                                                                               │                            │
│                            │   SET "target_audience" = '{"company_size":["100-500","600+"],"industries":["technology","finance"]}'   │                            │
│                            │   WHERE "id" = '1';                                                                                     │                            │
│                            │                                                                                                         │                            │
│                            ╰ Enter: Confirm │ Esc: Cancel ───────────────────────────────────────────────────────────────────────────╯                            │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
